# routes/Authentication.js
@@ -4,8 +4,8 @@ const User = require('../models/users');
 const bcrypt = require('bcryptjs');
 const jwt = require('jsonwebtoken');
 const { secret } = require('../config');
-const middlewareAuth = require('./middlewareAuth');
-const roleMiddleware = require('./RoleMiddleware');
+const middlewareAuth = require('../middleware/middlewareAuth');
+const roleMiddleware = require('../middleware/RoleMiddleware');
 const path = require('path');
 const { body, validationResult } = require('express-validator');
 
