# routes/Messages.js
@@ -1,8 +1,8 @@
 const express = require('express');
 const router = express.Router();
 const Message = require('../models/messages');
-const middlewareAuth = require('./middlewareAuth');
-const roleMiddleware = require('./RoleMiddleware');
+const middlewareAuth = require('../middleware/middlewareAuth');
+const roleMiddleware = require('../middleware/RoleMiddleware');
 const paginate = require('../middleware/pagination');
 router.post('/', async (req, res) => {
   try {
